# infinity-data-browser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  deployment_guide.md  deployment_postmortem.md  docker-compose.yml  eslint.config.js  feature_exploration.md  index.html  inspect_extras.py  openapi.json  package-lock.json  package.json  playwright.config.ts  run_mcp.sh  stylelint.config.js  tailwind.config.js  test.txt  test_conversions.js  test_mcp_its.js  test_mcp_wiki.js  tsconfig.app.json  vite.config.ts
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements.txt  verify_script.py
backend-ts/: .gitignore  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
backend/alembic/: env.py
backend/alembic/versions/: 05607a464723_initial_schema.py  76b09176587c_add_users_and_army_lists.py  a8b1e6760b9c_add_description_to_army_lists.py  abb83885459e_add_tags_to_army_lists.py  c1a2b3d4e5f6_add_ai_usage_table.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/agent/: __init__.py  agent.py  schemas.py
backend/app/agent/game_data/: __init__.py  dice_engine.py  fireteam_logic.py  loader.py
backend/app/agent/providers/: __init__.py  anthropic.py  base.py  gemini.py
backend/app/agent/tools/: __init__.py  definitions.py  executor.py
backend/app/etl/: import_json.py
backend/app/models/: __init__.py  ai_usage.py  army_list.py  faction.py  fireteam.py  item.py  unit.py  user.py
backend/app/routers/: agent.py  factions.py  lists.py  metadata.py  search.py  units.py
backend/app/schemas/: army_list.py  faction.py  search.py  unit.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_api.py  test_lists.py
data/: aleph.json  ank-program.json  ariadna.json  bakunin.json  caledonian-highlander-army.json  classifieds.json  code-capital.json  combined-army.json  contracted-back-up.json  core-rules-summary.md  corregidor.json  daebak-force.json  dahshat.json  deras-kaar.json  druze.json  force-de-reponse-rapide-merovingienne.json  haqqislam.json  hassassin-bahram.json  hayabusa.json  ikari.json  imperial-service.json  invincible-army.json  jsa.json  kestrel-colonial-force.json  kosmoflot.json  l-equipe-argent.json  melek-reaction-group.json  metadata.json  military-orders.json  morat.json  neoterran-capitaline-army.json  next-wave.json  nomads.json  o-12.json  oban.json  onyx.json  operations.json  panoceania.json  qapu-khalqi.json  ramah-taskforce.json  (+20 more)
data/wiki/: AP.md  (+646 more)
docs/: DATA_STRUCTURE.md  design.md  mobile-readiness-report.md
e2e/: README.md  debug.spec.ts  dice-calculator.spec.ts  list-builder.spec.ts  smoke.spec.ts
mcp-server/: DatabaseAdapter.test.ts  DatabaseAdapter.ts  army-utils.ts  index.ts  list-builder.ts  list-utils.ts  repro_crash.test.ts  run_analysis.ts  skill-summaries.ts  tsconfig.json  types.ts  utils.ts
public/: 404.html
scripts/: download-logos.ts  identify_factions.py  process-data.ts  query_infinity.py  refresh_data.ts  refresh_wiki.ts
shared/: BaseDatabase.test.ts  BaseDatabase.ts  armyCode.test.ts  armyCode.ts  classifieds.ts  dice-engine.test.ts  dice-engine.ts  factions.ts  fireteams.ts  game-model.ts  index.ts  list-scoring.test.ts  list-scoring.ts  list-similarity.test.ts  list-similarity.ts  listLogic.test.ts  listLogic.ts  listTypes.ts  package.json  tsconfig.json  types.ts  unit-roles.test.ts  unit-roles.ts  weapon-utils.ts
src/: App.tsx  index.css  main.tsx
terraform/: main.tf  variables.tf
(+345 files in other folders)
