[project]
name = "infinity-data-backend"
version = "0.1.0"
description = "FastAPI backend for Infinity Data Explorer"
authors = [{ name = "clindbeck9" }]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    # Schema source-of-truth (Alembic migrations) + game-data ETL importer.
    # The runtime API service is in backend-ts/; nothing here serves traffic.
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.31.0",
    "alembic==1.15.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# asyncpg does not ship py.typed
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
